# code-trajectory-mcp

./: .gitignore  AGENT_GUIDE.md  CASE_STUDY.md  CASE_STUDY_ko.md  DEPLOYMENT.md  LICENSE  PUBLISHING.md  README.md  README_ko.md  SPECIFICATION.md  deploy-testpypi.ps1  pyproject.toml  reproduce_issue.py  test-clean-install.md  test-clean-install.ps1
.github/workflows/: auto-release.yml  ci.yml  publish.yml
src/code_trajectory/: path_utils.py  recorder.py  server.py  trajectory.py  watcher.py
tests/: conftest.py  test_recorder.py  test_server_config.py  test_trajectory.py  test_windows_compat.py
